# GenericCollections

./: CMakeLists.txt  ICollection.h  Iterator.h  List.h  Person.h  QueueTest.h  README.md  Stack.h  icollection_test.h  linked_list.h  main.cpp  node.h  queue.h  queue_node.h
Models/: Int.h  Person.cpp  Person.h
tests/: icollection_tests.h  linked_list_test.h  list_test.h  queue_node_tests.h  queue_tests.h  run_tests.cpp  stack_tests.h
